--- a/vignette/quickstart.ipynb
+++ b/vignette/quickstart.ipynb
@@ -2,26 +2,88 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using GitHub PAT from the git credential store.\n",
+      "\n",
+      "Downloading GitHub repo hungms/annotatepip@HEAD\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m--\u001b[39m \u001b[36mR CMD build\u001b[39m \u001b[36m-----------------------------------------------------------------\u001b[39m\n",
+      "* checking for file '/private/var/folders/nq/x34jjrzs6937hpz46dbzxqfcpzmck6/T/RtmpsT29CK/remotes15bd864a68a8c/hungms-annotatepip-4c895c6/DESCRIPTION' ... OK\n",
+      "* preparing 'annotatepip':\n",
+      "* checking DESCRIPTION meta-information ... OK\n",
+      "* checking for LF line-endings in source and make files and shell scripts\n",
+      "* checking for empty or unneeded directories\n",
+      "Omitted 'LazyData' from DESCRIPTION\n",
+      "* building 'annotatepip_0.0.0.tar.gz'\n",
+      "Warning: invalid uid value replaced by that for user 'nobody'\n",
+      "Warning: invalid gid value replaced by that for user 'nobody'\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "devtools::install_github(\"hungms/annotatepip\", dependencies = F)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: BiocManager\n",
+      "\n",
+      "Bioconductor version '3.19' is out-of-date; the current release version '3.20'\n",
+      "  is available with R version '4.4'; see https://bioconductor.org/install\n",
+      "\n",
+      "Loading required package: tidyverse\n",
+      "\n",
+      "Warning message:\n",
+      "\"package 'purrr' was built under R version 4.4.1\"\n",
+      "Warning message:\n",
+      "\"package 'lubridate' was built under R version 4.4.1\"\n",
+      "-- \u001b[1mAttaching core tidyverse packages\u001b[22m ------------------------ tidyverse 2.0.0 --\n",
+      "\u001b[32mv\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.4     \u001b[32mv\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.5\n",
+      "\u001b[32mv\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32mv\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.1\n",
+      "\u001b[32mv\u001b[39m \u001b[34mggplot2  \u001b[39m 3.5.1     \u001b[32mv\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32mv\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.4     \u001b[32mv\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.1\n",
+      "\u001b[32mv\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.4     \n",
+      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------ tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mi\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
+      "Loading required package: biomaRt\n",
+      "\n",
+      "Loading required package: OmnipathR\n",
+      "\n",
+      "Warning message:\n",
+      "\"package 'OmnipathR' was built under R version 4.4.1\"\n"
+     ]
+    }
+   ],
    "source": [
     "setwd(\"/Users/hungm/Documents/development/annotatepip/\")\n",
     "library(annotatepip)"
@@ -29,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -141,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -225,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -309,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -415,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -478,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -486,13 +548,41 @@
    },
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in convert_human_to_mouse(human_genes, one.to.many = F): object 'moue.genes' not found\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in convert_human_to_mouse(human_genes, one.to.many = F): object 'moue.genes' not found\nTraceback:\n",
-      "1. .handleSimpleError(function (cnd) \n . {\n .     watcher$capture_plot_and_output()\n .     cnd <- sanitize_call(cnd)\n .     watcher$push(cnd)\n .     switch(on_error, continue = invokeRestart(\"eval_continue\"), \n .         stop = invokeRestart(\"eval_stop\"), error = NULL)\n . }, \"object 'moue.genes' not found\", base::quote(convert_human_to_mouse(human_genes, \n .     one.to.many = F)))"
-     ]
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'mt-Nd4'</li><li>'mt-Nd1'</li><li>'mt-Nd5'</li><li>'mt-Nd6'</li><li>'mt-Nd2'</li><li>'mt-Nd3'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'mt-Nd4'\n",
+       "\\item 'mt-Nd1'\n",
+       "\\item 'mt-Nd5'\n",
+       "\\item 'mt-Nd6'\n",
+       "\\item 'mt-Nd2'\n",
+       "\\item 'mt-Nd3'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'mt-Nd4'\n",
+       "2. 'mt-Nd1'\n",
+       "3. 'mt-Nd5'\n",
+       "4. 'mt-Nd6'\n",
+       "5. 'mt-Nd2'\n",
+       "6. 'mt-Nd3'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"mt-Nd4\" \"mt-Nd1\" \"mt-Nd5\" \"mt-Nd6\" \"mt-Nd2\" \"mt-Nd3\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -524,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -548,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 24,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -656,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -732,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 13,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -752,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 14,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -824,6 +914,96 @@
     "gmt <- read_gmt(\"tests/string_genes.gmt\")\n",
     "gmt %>% head(.)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "source": [
+    "## Add gene annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "add_gene_annotations <- function(df, gene_column = \"gene\", org = \"human\", release = \"105\"){\n",
+    "    stopifnot(org %in% c(\"human\", \"mouse\"))\n",
+    "    stopifnot(gene_column %in% colnames(df))\n",
+    "    stopifnot(is.data.frame(df))\n",
+    "    if(org == \"mouse\"){\n",
+    "        stopifnot(any(str_detect(df[[gene_column]], \"[a-z]\")) & org == \"mouse\")}\n",
+    "    else{\n",
+    "        stopifnot(!any(str_detect(df[[gene_column]], \"[a-z]\")) & org == \"human\")}\n",
+    "\n",
+    "    files <- list.files(system.file(\"extdata\", package = \"annotatepip\"), full.names = T)\n",
+    "    files <- files[str_detect(files, paste0(\"release-\", release, \"_\", org, \"_omnipath_db.tsv\"))]\n",
+    "    annot <- read.table(files, header = T, row.names = 1)\n",
+    "    df <- merge(df, annot, by.x = gene_column, by.y = paste0(org, \"_gene_symbol\"), all.x = T) %>%\n",
+    "        mutate(gene = Row.names)\n",
+    "    return(df)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in file(file, \"rt\"): invalid 'description' argument\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in file(file, \"rt\"): invalid 'description' argument\nTraceback:\n",
+      "1. read.table(files, header = T, row.names = 1)",
+      "2. file(file, \"rt\")",
+      "3. .handleSimpleError(function (cnd) \n . {\n .     watcher$capture_plot_and_output()\n .     cnd <- sanitize_call(cnd)\n .     watcher$push(cnd)\n .     switch(on_error, continue = invokeRestart(\"eval_continue\"), \n .         stop = invokeRestart(\"eval_stop\"), error = NULL)\n . }, \"invalid 'description' argument\", base::quote(file(file, \"rt\")))"
+     ]
+    }
+   ],
+   "source": [
+    "counts <- counts[,1:3]\n",
+    "counts$gene <- rownames(counts)\n",
+    "\n",
+    "counts.annotated<- add_gene_annotations(counts, gene_column = \"gene\", org = \"mouse\")\n",
+    "counts.annotated %>% head(.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
