--- a/vignette/quickstart.ipynb
+++ b/vignette/quickstart.ipynb
@@ -2,47 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using GitHub PAT from the git credential store.\n",
-      "\n",
-      "Downloading GitHub repo hungms/annotatepip@HEAD\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m--\u001b[39m \u001b[36mR CMD build\u001b[39m \u001b[36m-----------------------------------------------------------------\u001b[39m\n",
-      "* checking for file '/private/var/folders/nq/x34jjrzs6937hpz46dbzxqfcpzmck6/T/RtmpsT29CK/remotes15bd864a68a8c/hungms-annotatepip-4c895c6/DESCRIPTION' ... OK\n",
-      "* preparing 'annotatepip':\n",
-      "* checking DESCRIPTION meta-information ... OK\n",
-      "* checking for LF line-endings in source and make files and shell scripts\n",
-      "* checking for empty or unneeded directories\n",
-      "Omitted 'LazyData' from DESCRIPTION\n",
-      "* building 'annotatepip_0.0.0.tar.gz'\n",
-      "Warning: invalid uid value replaced by that for user 'nobody'\n",
-      "Warning: invalid gid value replaced by that for user 'nobody'\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "devtools::install_github(\"hungms/annotatepip\", dependencies = F)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "vscode": {
@@ -540,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -548,41 +507,13 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>'mt-Nd4'</li><li>'mt-Nd1'</li><li>'mt-Nd5'</li><li>'mt-Nd6'</li><li>'mt-Nd2'</li><li>'mt-Nd3'</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 'mt-Nd4'\n",
-       "\\item 'mt-Nd1'\n",
-       "\\item 'mt-Nd5'\n",
-       "\\item 'mt-Nd6'\n",
-       "\\item 'mt-Nd2'\n",
-       "\\item 'mt-Nd3'\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 'mt-Nd4'\n",
-       "2. 'mt-Nd1'\n",
-       "3. 'mt-Nd5'\n",
-       "4. 'mt-Nd6'\n",
-       "5. 'mt-Nd2'\n",
-       "6. 'mt-Nd3'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] \"mt-Nd4\" \"mt-Nd1\" \"mt-Nd5\" \"mt-Nd6\" \"mt-Nd2\" \"mt-Nd3\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ERROR",
+     "evalue": "Error in convert_human_to_mouse(human_genes, one.to.many = F): object 'moue.genes' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in convert_human_to_mouse(human_genes, one.to.many = F): object 'moue.genes' not found\nTraceback:\n",
+      "1. .handleSimpleError(function (cnd) \n . {\n .     watcher$capture_plot_and_output()\n .     cnd <- sanitize_call(cnd)\n .     watcher$push(cnd)\n .     switch(on_error, continue = invokeRestart(\"eval_continue\"), \n .         stop = invokeRestart(\"eval_stop\"), error = NULL)\n . }, \"object 'moue.genes' not found\", base::quote(convert_human_to_mouse(human_genes, \n .     one.to.many = F)))"
+     ]
     }
    ],
    "source": [
@@ -614,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -638,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -746,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -822,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -842,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -928,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -956,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {
     "vscode": {
      "languageId": "r"
