--- a/vignette/quickstart.ipynb
+++ b/vignette/quickstart.ipynb
@@ -2,6 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using GitHub PAT from the git credential store.\n",
+      "\n",
+      "Downloading GitHub repo hungms/annotatepip@HEAD\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m--\u001b[39m \u001b[36mR CMD build\u001b[39m \u001b[36m-----------------------------------------------------------------\u001b[39m\n",
+      "* checking for file '/private/var/folders/nq/x34jjrzs6937hpz46dbzxqfcpzmck6/T/RtmpDVqR9v/remotes1822558f8b90d/hungms-annotatepip-e46dbca/DESCRIPTION' ... OK\n",
+      "* preparing 'annotatepip':\n",
+      "* checking DESCRIPTION meta-information ... OK\n",
+      "* checking for LF line-endings in source and make files and shell scripts\n",
+      "* checking for empty or unneeded directories\n",
+      "Omitted 'LazyData' from DESCRIPTION\n",
+      "* building 'annotatepip_0.0.0.tar.gz'\n",
+      "Warning: invalid uid value replaced by that for user 'nobody'\n",
+      "Warning: invalid gid value replaced by that for user 'nobody'\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "devtools::install_github(\"hungms/annotatepip\", dependencies = F)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "vscode": {
@@ -507,13 +548,41 @@
    },
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in convert_human_to_mouse(human_genes, one.to.many = F): object 'moue.genes' not found\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in convert_human_to_mouse(human_genes, one.to.many = F): object 'moue.genes' not found\nTraceback:\n",
-      "1. .handleSimpleError(function (cnd) \n . {\n .     watcher$capture_plot_and_output()\n .     cnd <- sanitize_call(cnd)\n .     watcher$push(cnd)\n .     switch(on_error, continue = invokeRestart(\"eval_continue\"), \n .         stop = invokeRestart(\"eval_stop\"), error = NULL)\n . }, \"object 'moue.genes' not found\", base::quote(convert_human_to_mouse(human_genes, \n .     one.to.many = F)))"
-     ]
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'mt-Nd4'</li><li>'mt-Nd1'</li><li>'mt-Nd5'</li><li>'mt-Nd6'</li><li>'mt-Nd2'</li><li>'mt-Nd3'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'mt-Nd4'\n",
+       "\\item 'mt-Nd1'\n",
+       "\\item 'mt-Nd5'\n",
+       "\\item 'mt-Nd6'\n",
+       "\\item 'mt-Nd2'\n",
+       "\\item 'mt-Nd3'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'mt-Nd4'\n",
+       "2. 'mt-Nd1'\n",
+       "3. 'mt-Nd5'\n",
+       "4. 'mt-Nd6'\n",
+       "5. 'mt-Nd2'\n",
+       "6. 'mt-Nd3'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"mt-Nd4\" \"mt-Nd1\" \"mt-Nd5\" \"mt-Nd6\" \"mt-Nd2\" \"mt-Nd3\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -859,35 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "add_gene_annotations <- function(df, gene_column = \"gene\", org = \"human\", release = \"105\"){\n",
-    "    stopifnot(org %in% c(\"human\", \"mouse\"))\n",
-    "    stopifnot(gene_column %in% colnames(df))\n",
-    "    stopifnot(is.data.frame(df))\n",
-    "    if(org == \"mouse\"){\n",
-    "        stopifnot(any(str_detect(df[[gene_column]], \"[a-z]\")) & org == \"mouse\")}\n",
-    "    else{\n",
-    "        stopifnot(!any(str_detect(df[[gene_column]], \"[a-z]\")) & org == \"human\")}\n",
-    "\n",
-    "    files <- list.files(system.file(\"extdata\", package = \"annotatepip\"), full.names = T)\n",
-    "    files <- files[str_detect(files, paste0(\"release-\", release, \"_\", org, \"_omnipath_db.tsv\"))]\n",
-    "    annot <- read.table(files, header = T, row.names = 1)\n",
-    "    df <- merge(df, annot, by.x = gene_column, by.y = paste0(org, \"_gene_symbol\"), all.x = T) %>%\n",
-    "        mutate(gene = Row.names)\n",
-    "    return(df)\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -895,23 +936,93 @@
    },
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in file(file, \"rt\"): invalid 'description' argument\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in file(file, \"rt\"): invalid 'description' argument\nTraceback:\n",
-      "1. read.table(files, header = T, row.names = 1)",
-      "2. file(file, \"rt\")",
-      "3. .handleSimpleError(function (cnd) \n . {\n .     watcher$capture_plot_and_output()\n .     cnd <- sanitize_call(cnd)\n .     watcher$push(cnd)\n .     switch(on_error, continue = invokeRestart(\"eval_continue\"), \n .         stop = invokeRestart(\"eval_stop\"), error = NULL)\n . }, \"invalid 'description' argument\", base::quote(file(file, \"rt\")))"
-     ]
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 x 12</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>gene</th><th scope=col>C.CB_R1</th><th scope=col>C.CB_R2</th><th scope=col>C.CB_R3</th><th scope=col>mouse_chromosome</th><th scope=col>entity_type</th><th scope=col>category</th><th scope=col>parent</th><th scope=col>consensus_score</th><th scope=col>is_cs</th><th scope=col>database_cs</th><th scope=col>database_tf</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>0610010K14Rik</td><td>   8</td><td>  16</td><td>  18</td><td>11</td><td>protein</td><td>intracellular              </td><td>intracellular                                       </td><td>1</td><td>FALSE</td><td>ComPPI, OmniPath                                           </td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>0610030E20Rik</td><td>1452</td><td>1485</td><td>1087</td><td>6 </td><td>protein</td><td>intracellular              </td><td>intracellular                                       </td><td>1</td><td>FALSE</td><td>ComPPI, OmniPath                                           </td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>0610040J01Rik</td><td>   1</td><td>   2</td><td>   0</td><td>5 </td><td>protein</td><td>intracellular              </td><td>intracellular                                       </td><td>1</td><td>FALSE</td><td>OmniPath, ComPPI                                           </td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>1110032A03Rik</td><td>  99</td><td>  83</td><td>  50</td><td>9 </td><td>protein</td><td>intracellular              </td><td>intracellular                                       </td><td>3</td><td>FALSE</td><td>OmniPath, GO_Intercell, ComPPI, UniProt                    </td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>1110032F04Rik</td><td>   0</td><td>   0</td><td>   2</td><td>3 </td><td>protein</td><td>cell_surface, transmembrane</td><td>cell_surface, transmembrane, transmembrane_predicted</td><td>4</td><td> TRUE</td><td>Surfaceome, OmniPath, Ramilowski_location, UniProt, Phobius</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>1110038F14Rik</td><td> 656</td><td> 665</td><td> 589</td><td>15</td><td>protein</td><td>intracellular              </td><td>intracellular                                       </td><td>1</td><td>FALSE</td><td>ComPPI, OmniPath                                           </td><td>NA</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 x 12\n",
+       "\\begin{tabular}{r|llllllllllll}\n",
+       "  & gene & C.CB\\_R1 & C.CB\\_R2 & C.CB\\_R3 & mouse\\_chromosome & entity\\_type & category & parent & consensus\\_score & is\\_cs & database\\_cs & database\\_tf\\\\\n",
+       "  & <chr> & <int> & <int> & <int> & <chr> & <chr> & <chr> & <chr> & <int> & <lgl> & <chr> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t1 & 0610010K14Rik &    8 &   16 &   18 & 11 & protein & intracellular               & intracellular                                        & 1 & FALSE & ComPPI, OmniPath                                            & NA\\\\\n",
+       "\t2 & 0610030E20Rik & 1452 & 1485 & 1087 & 6  & protein & intracellular               & intracellular                                        & 1 & FALSE & ComPPI, OmniPath                                            & NA\\\\\n",
+       "\t3 & 0610040J01Rik &    1 &    2 &    0 & 5  & protein & intracellular               & intracellular                                        & 1 & FALSE & OmniPath, ComPPI                                            & NA\\\\\n",
+       "\t4 & 1110032A03Rik &   99 &   83 &   50 & 9  & protein & intracellular               & intracellular                                        & 3 & FALSE & OmniPath, GO\\_Intercell, ComPPI, UniProt                     & NA\\\\\n",
+       "\t5 & 1110032F04Rik &    0 &    0 &    2 & 3  & protein & cell\\_surface, transmembrane & cell\\_surface, transmembrane, transmembrane\\_predicted & 4 &  TRUE & Surfaceome, OmniPath, Ramilowski\\_location, UniProt, Phobius & NA\\\\\n",
+       "\t6 & 1110038F14Rik &  656 &  665 &  589 & 15 & protein & intracellular               & intracellular                                        & 1 & FALSE & ComPPI, OmniPath                                            & NA\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 x 12\n",
+       "\n",
+       "| <!--/--> | gene &lt;chr&gt; | C.CB_R1 &lt;int&gt; | C.CB_R2 &lt;int&gt; | C.CB_R3 &lt;int&gt; | mouse_chromosome &lt;chr&gt; | entity_type &lt;chr&gt; | category &lt;chr&gt; | parent &lt;chr&gt; | consensus_score &lt;int&gt; | is_cs &lt;lgl&gt; | database_cs &lt;chr&gt; | database_tf &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 1 | 0610010K14Rik |    8 |   16 |   18 | 11 | protein | intracellular               | intracellular                                        | 1 | FALSE | ComPPI, OmniPath                                            | NA |\n",
+       "| 2 | 0610030E20Rik | 1452 | 1485 | 1087 | 6  | protein | intracellular               | intracellular                                        | 1 | FALSE | ComPPI, OmniPath                                            | NA |\n",
+       "| 3 | 0610040J01Rik |    1 |    2 |    0 | 5  | protein | intracellular               | intracellular                                        | 1 | FALSE | OmniPath, ComPPI                                            | NA |\n",
+       "| 4 | 1110032A03Rik |   99 |   83 |   50 | 9  | protein | intracellular               | intracellular                                        | 3 | FALSE | OmniPath, GO_Intercell, ComPPI, UniProt                     | NA |\n",
+       "| 5 | 1110032F04Rik |    0 |    0 |    2 | 3  | protein | cell_surface, transmembrane | cell_surface, transmembrane, transmembrane_predicted | 4 |  TRUE | Surfaceome, OmniPath, Ramilowski_location, UniProt, Phobius | NA |\n",
+       "| 6 | 1110038F14Rik |  656 |  665 |  589 | 15 | protein | intracellular               | intracellular                                        | 1 | FALSE | ComPPI, OmniPath                                            | NA |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  gene          C.CB_R1 C.CB_R2 C.CB_R3 mouse_chromosome entity_type\n",
+       "1 0610010K14Rik    8      16      18    11               protein    \n",
+       "2 0610030E20Rik 1452    1485    1087    6                protein    \n",
+       "3 0610040J01Rik    1       2       0    5                protein    \n",
+       "4 1110032A03Rik   99      83      50    9                protein    \n",
+       "5 1110032F04Rik    0       0       2    3                protein    \n",
+       "6 1110038F14Rik  656     665     589    15               protein    \n",
+       "  category                   \n",
+       "1 intracellular              \n",
+       "2 intracellular              \n",
+       "3 intracellular              \n",
+       "4 intracellular              \n",
+       "5 cell_surface, transmembrane\n",
+       "6 intracellular              \n",
+       "  parent                                               consensus_score is_cs\n",
+       "1 intracellular                                        1               FALSE\n",
+       "2 intracellular                                        1               FALSE\n",
+       "3 intracellular                                        1               FALSE\n",
+       "4 intracellular                                        3               FALSE\n",
+       "5 cell_surface, transmembrane, transmembrane_predicted 4                TRUE\n",
+       "6 intracellular                                        1               FALSE\n",
+       "  database_cs                                                 database_tf\n",
+       "1 ComPPI, OmniPath                                            NA         \n",
+       "2 ComPPI, OmniPath                                            NA         \n",
+       "3 OmniPath, ComPPI                                            NA         \n",
+       "4 OmniPath, GO_Intercell, ComPPI, UniProt                     NA         \n",
+       "5 Surfaceome, OmniPath, Ramilowski_location, UniProt, Phobius NA         \n",
+       "6 ComPPI, OmniPath                                            NA         "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "counts <- counts[,1:3]\n",
     "counts$gene <- rownames(counts)\n",
     "\n",
-    "counts.annotated<- add_gene_annotations(counts, gene_column = \"gene\", org = \"mouse\")\n",
-    "counts.annotated %>% head(.)"
+    "counts.annotated<- run_annotation(counts, gene_column = \"gene\", org = \"mouse\")\n",
+    "counts.annotated %>% filter(!is.na(entity_type)) %>% head(.)"
    ]
   },
   {
